# imbored

./: README.md  pyproject.toml
imbored/: __main__.py  event.py  event_pydantic.py  events.html  scrape.py  tui_test.py
tests/: test_imbored.py
