[tool.poetry]
name = "imbored"
version = "0.1.0"
description = "Returns a list of events"
authors = ["Chris Lee <chris@noreply.github.com>"]

[tool.poetry.scripts]
imbored = "imbored.__main__:run"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pydantic = "^1.10.2"
textual = "^0.1.18"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
